# img_detection

./: CMakeLists.txt  package.xml
include/: common.h  img_detection.hpp  img_detection_node.hpp  video_utils.hpp
src/: img_detection_main.cpp
